# powerbi_gitlab_cicd

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  config.yml  pyproject.toml
asset/test_fabric_gitlab_cicd.Report/: .platform  definition.pbir
asset/test_fabric_gitlab_cicd.Report/.pbi/: localSettings.json
asset/test_fabric_gitlab_cicd.Report/definition/pages/: pages.json
asset/test_fabric_gitlab_cicd.Report/definition/pages/f08532185baa94091e70/: page.json
asset/test_fabric_gitlab_cicd.SemanticModel/: .platform
asset/test_fabric_gitlab_cicd.SemanticModel/.pbi/: cache.abf  localSettings.json
asset/test_fabric_gitlab_cicd.SemanticModel/definition/: model.tmdl
asset/test_fabric_gitlab_cicd.SemanticModel/definition/tables/: Exported.tmdl
docs/: REQUIREMENTS.md
scripts/: deploy.py  pull.py
src/core_api/api/: base.py  fabric.py
src/core_api/auth/: azure_default_credential.py  base.py  fabric_service_principal.py  scopes.py
src/powerbi_gitlab/: __init__.py  auth_builders.py  constants.py  deploy.py  fabric_definition.py  fabric_export.py  pull.py  sync.py
tests/: .test.env.example  conftest.py  test_default_azure_credential.py  test_pull_workspace.py  test_sync_workspace.py  test_workspace_items.py
tests/behavior_verify/: conftest.py  test_content_update_after_import.py
tests/behavior_verify/fixtures/Test report.Report/: .platform  definition.pbir  report.json
tests/behavior_verify/fixtures/Test report.SemanticModel/: .platform
tests/behavior_verify/fixtures/Test report.SemanticModel/definition/: expressions.tmdl  (+2 more)
(+8 files in other folders)
